Fixed layout issue

--- a/src/assets/scss/detailsPage.scss
+++ b/src/assets/scss/detailsPage.scss
@@ -1,6 +1,4 @@
 .details-page {
-  margin-top: 110px;
-
   .secondary {
     @include button(rgba(63, 63, 63, 0.7));
     margin-right: 20px;
